--- a/styles/video.module.css
+++ b/styles/video.module.css
@@ -21,8 +21,8 @@
 }
 
 .adheader {
-  position: absolute;
-  top: 0;
+  /* position: absolute;
+  top: 0; */
   background-color: #63b5f6;
   width: 100%;
   height: 110px;
@@ -36,8 +36,8 @@
 }
 
 .adoverlay {
-  position: absolute;
-  top: 0;
+  /* position: absolute;
+  top: 0; */
   width: 100%;
   height: 110px;
   overflow: hidden;
